<resources>
    <string name="app_name">MU Reev</string>
    <string name="welcome">Welcome to MU Reev</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourit</string>
    <string name="playlist_btn">Playlist</string>
    <string name="play_pause">Play Pause</string>
    <string name="total_songs">Total Lagu</string>
    <string name="song_name">Song Name</string>
    <string name="album_name">Album Name</string>
    <string name="artis_name">Unknown artist</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading..</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="home_btn">Home</string>
    <string name="queue_btn">Queue</string>
    <string name="next_btn">Next</string>
    <string name="previous_btn">Previous</string>
    <string name="speed_btn">Speed</string>
    <string name="lyric_btn">Lyric</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="app_icon">Icon</string>
    <string name="feedback">Feedback</string>
    <string name="user">User</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="song_album">Song Album</string>
    <string name="min_1">1 Minutes</string>
    <string name="min_5">5 Minutes</string>
    <string name="min_10">10 Minutes</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="min_120">120 Minutes</string>
    <string name="min_240">240 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>
    <string name="hold_delete">Delete</string>
    <string name="hold_favourite">Favourit</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>
    <string name="album_cover">Album Cover</string>
    <string name="play_next">Play Next</string>
    <string name="info">Info</string>
    <string name="detail">Detail</string>
    <string name="scroll_up">Scroll Up</string>
    <string name="MostPlayedBtn">Most Played</string>
    <string name="volume_btn">Volume</string>
    <string name="now_playing">Now Playing</string>
    <string name="volumeLabel">Volume: 100%</string>
    <string name="description_optional">Deskripsi Playlist</string>
    <string name="tutup">TUTUP</string>
    <string name="queue">Queue</string>
    <string name="edit">Edit</string>
    <string name="album_btn">Album</string>
    <string name="artis_btn">Artis</string>
    <string name="genre_btn">Genre</string>
    <string name="play_next_note">Tip: Long Press On Any Video To Add It Into Play Next. &#128522; </string>
    <string name="favourite_note">Tip: Putar Musik dan Klik ❤️ Untuk Menambahkannya ke Favorit. </string>
    <string name="playlist_note">Tip: Klik ➕ Untuk Membuat Playlist Baru. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>