<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/navUser"
        android:title="@string/user"
        android:icon="@drawable/user_icon"/>

    <item android:id="@+id/navSettings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"/>

    <item
        android:id="@+id/navStats"
        android:title="Statistics"
        android:icon="@drawable/stats_icon" />

    <item android:id="@+id/navAbout"
        android:title="@string/about"
        android:icon="@drawable/about_icon"/>

    <item android:id="@+id/navExit"
        android:title="@string/exit"
        android:icon="@drawable/exit_icon"/>

    <item android:id="@+id/navLogout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon"/>

</menu>