<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:padding="1dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Opsi Waktu Timer -->
        <LinearLayout
            android:id="@+id/min_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_1"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_5"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_10" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_10"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_15" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_15"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_30" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_30"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_60" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_60"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_120"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_120" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_120"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/min_240"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/timer_icon"
                app:tint="@color/cool_blue"
                android:contentDescription="@string/min_240" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_240"
                android:textSize="16sp"
                android:gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</HorizontalScrollView>
