<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NowPlaying">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgNP"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="12dp"
        android:src="@drawable/music_player_icon_slash_screen"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/songNameNP"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:layout_marginVertical="7dp"
        android:layout_toEndOf="@id/songImgNP"
        android:ellipsize="marquee"
        android:gravity="center_vertical"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/song_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/songArtisNP"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/songNameNP"
        android:layout_marginHorizontal="81dp"

        android:layout_marginTop="-6dp"
        android:singleLine="true"
        android:text="@string/artis_name"
        android:textColor="@color/abu."
        android:textSize="14sp" />

    <TextView
        android:id="@+id/audioInfoNP"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/songArtisNP"
        android:layout_marginHorizontal="81dp"
        android:layout_marginTop="1dp"
        android:singleLine="true"
        android:textColor="@color/abu."
        android:textSize="11sp"
        tools:text="FLAC: 44.1kHz 16bit 1412Kbps" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextBtnNP"
        android:contentDescription="@string/play_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="1dp"
        android:layout_marginVertical="5dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:elevation="0dp"
        app:icon="@drawable/skip_next_icon"
        app:iconSize="30dp"
        app:iconTint="@color/white" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playPauseBtnNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_toStartOf="@id/nextBtnNP"
        android:backgroundTint="@android:color/transparent"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        app:elevation="0dp"
        app:fabSize="normal"
        app:icon="@drawable/play_icon"
        app:iconSize="30dp"
        android:contentDescription="@string/play_pause"
        app:iconTint="@color/white"/>

</RelativeLayout>